icon mobile text fixed

--- a/style/style.css
+++ b/style/style.css
@@ -141,6 +141,7 @@ body {
       padding: 3px 0;
       left: 2rem;
       bottom: 2rem;
+      position: fixed;
   
       /* Position the tooltip */
       position: absolute;
